(lang dune 3.12)

(name aoc2025)

(generate_opam_files true)

(source
 (github katafrakt/advent_of_code_2025))

(authors "Pawe\197\130 \197\154wi\196\133tkowski")

(license LICENSE)

(package
 (name aoc2025)
 (synopsis "Solutions for 2025 edition of Advent of Code")
 (description "Solutions for 2025 edition of Advent of Code")
 (depends ocaml dune)
 (tags
  (topics "advent of code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
